update script files

--- a/Results_analysis.ipynb
+++ b/Results_analysis.ipynb
@@ -4380,10 +4380,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "c8371bfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n =  5\n",
+      "n =  10\n",
+      "n =  15\n",
+      "n =  20\n",
+      "n =  25\n",
+      "n =  30\n",
+      "n =  35\n",
+      "n =  40\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = [5,10,15,20,25,30,35,40]\n",
+    "travel_duration_analysis = {\n",
+    "    \"dka_vrp\": [],\n",
+    "}\n",
+    "for i in n:\n",
+    "    # setting\n",
+    "    hotel,tur,timematrix = generate_data(n=i,random_state=30)\n",
+    "    travel_days = 100\n",
+    "    dwaktu,dtarif,drating = 1,0,0\n",
+    "    keys = [\"total_duration\",\"days_needed\"]\n",
+    "    \n",
+    "    print(\"n = \",i)\n",
+    "    \n",
+    "    dka_vrp = DKA_VRP(random_state=100)\n",
+    "    results_dka_vrp = get_analysis(dka_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    travel_duration_analysis[\"dka_vrp\"].append(results_dka_vrp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "255d7450",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dka_vrp': [{'solution': [[86, 88, 4, 74, 40]],\n",
+       "   'fitness': 0.9982199074074074,\n",
+       "   'daily_fitness': [0.9971597222222222],\n",
+       "   'days_needed': 1,\n",
+       "   'poi_included': 5,\n",
+       "   'avg_rating': 4.58,\n",
+       "   'total_tarif': 0,\n",
+       "   'total_duration': 24540,\n",
+       "   'run_time': 0.08366036415100098},\n",
+       "  {'solution': [[40, 74, 88, 35, 4, 86, 7, 53], [29, 93]],\n",
+       "   'fitness': 0.9958726851851851,\n",
+       "   'daily_fitness': [0.895361111111111, 0.5972569444444444],\n",
+       "   'days_needed': 2,\n",
+       "   'poi_included': 10,\n",
+       "   'avg_rating': 4.619999999999999,\n",
+       "   'total_tarif': 67500,\n",
+       "   'total_duration': 63780,\n",
+       "   'run_time': 0.30881834030151367},\n",
+       "  {'solution': [[93, 92, 88, 53, 7, 35, 4],\n",
+       "    [11, 64, 29, 51, 74, 40],\n",
+       "    [86, 18]],\n",
+       "   'fitness': 0.9939143518518518,\n",
+       "   'daily_fitness': [0.7285833333333334,\n",
+       "    0.6951041666666666,\n",
+       "    0.5655555555555556],\n",
+       "   'days_needed': 3,\n",
+       "   'poi_included': 15,\n",
+       "   'avg_rating': 4.593333333333333,\n",
+       "   'total_tarif': 100000,\n",
+       "   'total_duration': 92940,\n",
+       "   'run_time': 0.8842930793762207},\n",
+       "  {'solution': [[4, 22, 40, 18, 11, 74, 53, 7],\n",
+       "    [29, 51, 71, 86, 88, 35],\n",
+       "    [64, 34, 92, 93, 10, 1]],\n",
+       "   'fitness': 0.9925127314814814,\n",
+       "   'daily_fitness': [0.6950347222222222,\n",
+       "    0.6449930555555555,\n",
+       "    0.6450138888888889],\n",
+       "   'days_needed': 3,\n",
+       "   'poi_included': 20,\n",
+       "   'avg_rating': 4.589999999999999,\n",
+       "   'total_tarif': 105000,\n",
+       "   'total_duration': 129240,\n",
+       "   'run_time': 0.4468975067138672},\n",
+       "  {'solution': [[71, 4, 22, 86, 35, 74, 40],\n",
+       "    [64, 34, 72, 29, 51],\n",
+       "    [11, 18, 1, 95, 88, 10, 7, 9, 53],\n",
+       "    [47, 73, 54, 93]],\n",
+       "   'fitness': 0.9904965277777777,\n",
+       "   'daily_fitness': [0.6349236111111112,\n",
+       "    0.5949305555555555,\n",
+       "    0.6752013888888888,\n",
+       "    0.5765069444444444],\n",
+       "   'days_needed': 4,\n",
+       "   'poi_included': 25,\n",
+       "   'avg_rating': 4.552,\n",
+       "   'total_tarif': 280000,\n",
+       "   'total_duration': 159300,\n",
+       "   'run_time': 0.5843782424926758},\n",
+       "  {'solution': [[40, 39, 69, 46, 7, 4, 35, 88, 9],\n",
+       "    [16, 18, 64, 53, 74, 10],\n",
+       "    [72, 54, 73, 95, 47, 93],\n",
+       "    [34, 51, 29, 71, 22],\n",
+       "    [76, 1, 11, 86]],\n",
+       "   'fitness': 0.9886874999999999,\n",
+       "   'daily_fitness': [0.6449583333333333,\n",
+       "    0.5952222222222222,\n",
+       "    0.5953402777777778,\n",
+       "    0.5783194444444445,\n",
+       "    0.56475],\n",
+       "   'days_needed': 5,\n",
+       "   'poi_included': 30,\n",
+       "   'avg_rating': 4.5633333333333335,\n",
+       "   'total_tarif': 294000,\n",
+       "   'total_duration': 184980,\n",
+       "   'run_time': 2.4372737407684326},\n",
+       "  {'solution': [[46, 89, 69, 40, 30, 88, 73, 22],\n",
+       "    [47, 16, 54, 53, 7, 10, 96],\n",
+       "    [39, 65, 29, 51],\n",
+       "    [11, 93, 72, 74, 71],\n",
+       "    [76, 1, 18, 86, 9, 95, 85, 35, 4],\n",
+       "    [64, 34]],\n",
+       "   'fitness': 0.9862326388888889,\n",
+       "   'daily_fitness': [0.6092718253968255,\n",
+       "    0.5950694444444444,\n",
+       "    0.5521220238095238,\n",
+       "    0.5665535714285714,\n",
+       "    0.6242867063492064,\n",
+       "    0.5264117063492063],\n",
+       "   'days_needed': 6,\n",
+       "   'poi_included': 35,\n",
+       "   'avg_rating': 4.55142857142857,\n",
+       "   'total_tarif': 339000,\n",
+       "   'total_duration': 227100,\n",
+       "   'run_time': 2.25522518157959},\n",
+       "  {'solution': [[1, 69, 29, 22, 89, 96],\n",
+       "    [46, 30, 39, 93, 43, 9],\n",
+       "    [38, 51, 53, 86, 83, 40],\n",
+       "    [47, 16, 72, 95, 73, 11, 85, 88, 35],\n",
+       "    [54, 18, 71, 65, 10, 7],\n",
+       "    [76, 62, 64, 34, 74, 4],\n",
+       "    [8]],\n",
+       "   'fitness': 0.9842766203703703,\n",
+       "   'daily_fitness': [0.5701736111111111,\n",
+       "    0.5700625,\n",
+       "    0.5701527777777777,\n",
+       "    0.6078541666666667,\n",
+       "    0.5699652777777777,\n",
+       "    0.5705763888888888,\n",
+       "    0.5115625],\n",
+       "   'days_needed': 7,\n",
+       "   'poi_included': 40,\n",
+       "   'avg_rating': 4.549999999999999,\n",
+       "   'total_tarif': 420000,\n",
+       "   'total_duration': 256200,\n",
+       "   'run_time': 5.06269097328186}]}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_duration_analysis"
    ]
@@ -4709,6 +4875,47 @@
     "acsbso_vrp = ACSBSO_VRP(random_state=100)\n",
     "results_acsbso_vrp = get_analysis(acsbso_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
     "results_acsbso_vrp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "64cf5d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DKA - VRP\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'solution': [[1, 18, 40, 76, 16, 46, 53, 73, 9],\n",
+       "  [39, 86, 95, 51, 22, 74],\n",
+       "  [11, 54, 93, 7, 10, 88, 4, 35]],\n",
+       " 'fitness': 0.8399659863945579,\n",
+       " 'daily_fitness': [0.6074829931972789, 0.5770408163265306, 0.6120748299319728],\n",
+       " 'days_needed': 3,\n",
+       " 'poi_included': 23,\n",
+       " 'avg_rating': 4.578260869565216,\n",
+       " 'total_tarif': 51000,\n",
+       " 'total_duration': 130680,\n",
+       " 'run_time': 1.4274122714996338}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"DKA - VRP\")\n",
+    "dka_vrp = DKA_VRP(random_state=100)\n",
+    "results_dka_vrp = get_analysis(dka_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "results_dka_vrp"
    ]
   },
   {
@@ -5049,7 +5256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "67427a13",
    "metadata": {},
    "outputs": [],
@@ -5267,6 +5474,47 @@
     "acsbso_vrp = ACSBSO_VRP(random_state=100)\n",
     "results_acsbso_vrp = get_analysis(acsbso_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
     "results_acsbso_vrp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3292d702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DKA - VRP\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'solution': [[4, 46, 9, 22, 47, 1, 53],\n",
+       "  [39, 40, 29, 11, 88, 35, 74],\n",
+       "  [72, 76, 18, 69, 95, 10, 16, 7, 73]],\n",
+       " 'fitness': 0.8073108922746601,\n",
+       " 'daily_fitness': [0.5122710622710623, 0.4463369963369965, 0.4790598290598286],\n",
+       " 'days_needed': 3,\n",
+       " 'poi_included': 23,\n",
+       " 'avg_rating': 4.608695652173912,\n",
+       " 'total_tarif': 254000,\n",
+       " 'total_duration': 129300,\n",
+       " 'run_time': 2.536196708679199}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"DKA - VRP\")\n",
+    "dka_vrp = DKA_VRP(random_state=100)\n",
+    "results_dka_vrp = get_analysis(dka_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "results_dka_vrp"
    ]
   },
   {
