--- a/Results_analysis_3_haco.ipynb
+++ b/Results_analysis_3_haco.ipynb
@@ -24879,6 +24879,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "d3b57018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df.groupby(['method','dwaktu','dtarif','drating']).mean().reset_index().to_excel('hana_doi_combination.xlsx',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "id": "ccf513bc",
    "metadata": {},
@@ -25150,7 +25160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8bbe205",
+   "id": "3bb2b619",
    "metadata": {},
    "outputs": [],
    "source": []
