--- a/Results_analysis_2_1_komodo_project_DKA_etc.ipynb
+++ b/Results_analysis_2_1_komodo_project_DKA_etc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "2e90e60c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "98471d94",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "7eb472d9",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "b09e5a26",
    "metadata": {},
    "outputs": [],
@@ -268,12 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 252,
    "id": "acef994e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hotel,tur,timematrix,tourid,idhotel = generate_data(n=30,random_state=40)\n",
+    "hotel,tur,timematrix = generate_data(n=30,random_state=40)\n",
     "travel_days = 3\n",
     "dwaktu,dtarif,drating = 1,1,1\n",
     "n = 1"
@@ -281,24 +281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "7b847261",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration = 0 | best fitness = 0.72074\n",
-      "Iteration = 1 | best fitness = 0.72074\n",
-      "Iteration = 2 | best fitness = 0.72074\n",
-      "Duration,  0:00:33.859217 seconds\n",
-      "Fitness value : 0.7069449696062602\n",
-      "Duration: 31692\n",
-      "Cost: 250000\n",
-      "Rating: 4.585714285714286\n",
-      "results\n",
-      "[{'index': [62, 13, 15, 99, 35, 4, 29], 'waktu': ['08:00:00', '09:07:33', '10:21:45', '10:57:40', '12:36:46', '13:39:35', '16:14:10', '17:44:10', '18:41:07'], 'rating': [4.6, 4.8, 4.5, 4.3, 4.6, 4.7, 4.4], 'tarif': [0, 0, 0, 30000, 10000, 50000, 10000]}, {'index': [85, 20, 24, 28, 89, 17, 57, 43], 'waktu': ['08:00:00', '08:12:43', '10:20:15', '11:08:28', '13:56:42', '15:29:08', '16:35:31', '18:38:23', '19:38:23', '20:32:13'], 'rating': [4.5, 4.7, 4.4, 4.4, 4.6, 4.5, 4.4, 4.8], 'tarif': [0, 10000, 0, 115000, 0, 0, 15000, 0]}, {'index': [92, 44, 7, 8, 96, 60], 'waktu': ['08:00:00', '08:25:27', '09:43:36', '10:43:59', '12:49:31', '14:56:42', '15:56:42', '16:09:52'], 'rating': [4.8, 4.7, 4.7, 4.7, 4.5, 4.7], 'tarif': [0, 3000, 0, 7000, 0, 0]}]\n"
+     "ename": "TypeError",
+     "evalue": "Algorithm.__init__() got an unexpected keyword argument 'random_state'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m woa_model \u001b[38;5;241m=\u001b[39m WOA_VRP(random_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m      2\u001b[0m solution, fitness \u001b[38;5;241m=\u001b[39m woa_model\u001b[38;5;241m.\u001b[39mconstruct_solution()\n",
+      "\u001b[1;31mTypeError\u001b[0m: Algorithm.__init__() got an unexpected keyword argument 'random_state'"
      ]
     }
    ],
@@ -306,6 +301,14 @@
     "woa_model = WOA_VRP(tourid, idhotel, dwaktu, dtarif, drating, travel_days, n)\n",
     "solution, fitness = woa_model.construct_solution()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "fc5b3639",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -74453,7 +74456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 167,
    "id": "16556d61",
    "metadata": {},
    "outputs": [
@@ -74539,7 +74542,7 @@
        "4  0.715586  0.118830  5  acs_vrp           25"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74551,6 +74554,14 @@
     "results_df = results_df.reset_index(drop=True)\n",
     "results_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40f8efa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75624,6 +75635,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "118953cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "780cd97b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78a6d74f",
    "metadata": {},
    "outputs": [],
    "source": []
