--- a/Results_analysis_2_2_komodo_project_KMA_WOA_VNS.ipynb
+++ b/Results_analysis_2_2_komodo_project_KMA_WOA_VNS.ipynb
@@ -213,6 +213,504 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf5fcfeb",
+   "metadata": {},
+   "source": [
+    "## Outlier Sensitivity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "29a510a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotel,tur,timematrix = generate_data(n=87,random_state=40)\n",
+    "dwaktu,dtarif,drating = 1,0,0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f60f5730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_outlier = [39, 58, 62, 64, 65]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "747c000d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_days = 1\n",
+    "max_days = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ec88fab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlier_sensitivity_analysis = {1 : {},\n",
+    "                                2 : {},\n",
+    "                                3 : {},\n",
+    "                                4 : {},\n",
+    "                                5 : {}\n",
+    "                                6 : {},\n",
+    "                                7 : {},\n",
+    "                                8 : {},\n",
+    "                                9 : {},\n",
+    "                                10 : {},\n",
+    "                                11 : {},\n",
+    "                                12 : {},\n",
+    "                               13 : {}}\n",
+    "\n",
+    "for n_days in outlier_sensitivity_analysis:\n",
+    "    travel_days = n_days\n",
+    "    \n",
+    "    kma_vrp = KMA_VRP(random_state=20)\n",
+    "    results_kma_vrp = get_analysis(kma_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    num_outlier = len([outlier for outlier in id_outlier if outlier in sum(results_kma_vrp['solution'],[])])\n",
+    "    outlier_sensitivity_analysis[travel_days][\"kma_vrp\"] = num_outlier\n",
+    "    \n",
+    "    woa_vrp = WOA_VRP(random_state=20)\n",
+    "    results_woa_vrp = get_analysis(woa_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    num_outlier = len([outlier for outlier in id_outlier if outlier in sum(results_woa_vrp['solution'],[])])\n",
+    "    outlier_sensitivity_analysis[travel_days][\"woa_vrp\"] = num_outlier\n",
+    "    \n",
+    "    vns_vrp = VNS_VRP(random_state=100)\n",
+    "    results_vns_vrp = get_analysis(vns_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    num_outlier = len([outlier for outlier in id_outlier if outlier in sum(results_vns_vrp['solution'],[])])\n",
+    "    outlier_sensitivity_analysis[travel_days][\"vns_vrp\"] = num_outlier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ccbf444a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n_days in outlier_sensitivity_analysis:\n",
+    "    if n_days>5:\n",
+    "        continue\n",
+    "    travel_days = n_days\n",
+    "    \n",
+    "    kma_vrp = KMA_VRP(random_state=20)\n",
+    "    results_kma_vrp = get_analysis(kma_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    num_outlier = len([outlier for outlier in id_outlier if outlier in sum(results_kma_vrp['solution'],[])])\n",
+    "    outlier_sensitivity_analysis[travel_days][\"kma_vrp\"] = num_outlier\n",
+    "    \n",
+    "    woa_vrp = WOA_VRP(random_state=20)\n",
+    "    results_woa_vrp = get_analysis(woa_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    num_outlier = len([outlier for outlier in id_outlier if outlier in sum(results_woa_vrp['solution'],[])])\n",
+    "    outlier_sensitivity_analysis[travel_days][\"woa_vrp\"] = num_outlier\n",
+    "    \n",
+    "    vns_vrp = VNS_VRP(random_state=100)\n",
+    "    results_vns_vrp = get_analysis(vns_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    num_outlier = len([outlier for outlier in id_outlier if outlier in sum(results_vns_vrp['solution'],[])])\n",
+    "    outlier_sensitivity_analysis[travel_days][\"vns_vrp\"] = num_outlier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "acf5248f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6: {'kma_vrp': 0, 'woa_vrp': 1, 'vns_vrp': 0},\n",
+       " 7: {'kma_vrp': 0, 'woa_vrp': 1, 'vns_vrp': 2},\n",
+       " 8: {'kma_vrp': 2, 'woa_vrp': 2, 'vns_vrp': 0},\n",
+       " 9: {'kma_vrp': 2, 'woa_vrp': 2, 'vns_vrp': 2},\n",
+       " 10: {'kma_vrp': 2, 'woa_vrp': 3, 'vns_vrp': 4},\n",
+       " 11: {'kma_vrp': 4, 'woa_vrp': 4, 'vns_vrp': 3},\n",
+       " 12: {'kma_vrp': 4, 'woa_vrp': 4, 'vns_vrp': 3},\n",
+       " 13: {'kma_vrp': 4, 'woa_vrp': 4, 'vns_vrp': 5},\n",
+       " 1: {'kma_vrp': 0, 'woa_vrp': 0, 'vns_vrp': 0},\n",
+       " 2: {'kma_vrp': 0, 'woa_vrp': 0, 'vns_vrp': 0},\n",
+       " 3: {'kma_vrp': 0, 'woa_vrp': 1, 'vns_vrp': 0},\n",
+       " 4: {'kma_vrp': 0, 'woa_vrp': 0, 'vns_vrp': 0},\n",
+       " 5: {'kma_vrp': 0, 'woa_vrp': 1, 'vns_vrp': 1}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outlier_sensitivity_analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "835e9013",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pd.DataFrame()\n",
+    "for i in outlier_sensitivity_analysis:\n",
+    "    if i not in range(min_days,max_days+1):\n",
+    "        continue\n",
+    "    else:\n",
+    "        travel_days = i\n",
+    "        methods = []\n",
+    "        num_outlier = []\n",
+    "        for j in outlier_sensitivity_analysis[i]:\n",
+    "            methods.append(j)\n",
+    "            num_outlier.append(outlier_sensitivity_analysis[i][j])\n",
+    "        temp_res = pd.DataFrame({'methods':methods,\n",
+    "                                'num_outlier':num_outlier})\n",
+    "        temp_res['travel_days'] = travel_days\n",
+    "        result = pd.concat([result,temp_res])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "689c2686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>methods</th>\n",
+       "      <th>num_outlier</th>\n",
+       "      <th>travel_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kma_vrp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>woa_vrp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vns_vrp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   methods  num_outlier  travel_days\n",
+       "0  kma_vrp            0            6\n",
+       "1  woa_vrp            1            6\n",
+       "2  vns_vrp            0            6\n",
+       "0  kma_vrp            0            7\n",
+       "1  woa_vrp            1            7\n",
+       "2  vns_vrp            2            7\n",
+       "0  kma_vrp            2            8\n",
+       "1  woa_vrp            2            8\n",
+       "2  vns_vrp            0            8\n",
+       "0  kma_vrp            2            9\n",
+       "1  woa_vrp            2            9\n",
+       "2  vns_vrp            2            9\n",
+       "0  kma_vrp            2           10\n",
+       "1  woa_vrp            3           10\n",
+       "2  vns_vrp            4           10\n",
+       "0  kma_vrp            4           11\n",
+       "1  woa_vrp            4           11\n",
+       "2  vns_vrp            3           11\n",
+       "0  kma_vrp            4           12\n",
+       "1  woa_vrp            4           12\n",
+       "2  vns_vrp            3           12\n",
+       "0  kma_vrp            4           13\n",
+       "1  woa_vrp            4           13\n",
+       "2  vns_vrp            5           13\n",
+       "0  kma_vrp            0            1\n",
+       "1  woa_vrp            0            1\n",
+       "2  vns_vrp            0            1\n",
+       "0  kma_vrp            0            2\n",
+       "1  woa_vrp            0            2\n",
+       "2  vns_vrp            0            2\n",
+       "0  kma_vrp            0            3\n",
+       "1  woa_vrp            1            3\n",
+       "2  vns_vrp            0            3\n",
+       "0  kma_vrp            0            4\n",
+       "1  woa_vrp            0            4\n",
+       "2  vns_vrp            0            4\n",
+       "0  kma_vrp            0            5\n",
+       "1  woa_vrp            1            5\n",
+       "2  vns_vrp            1            5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "948afb5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.to_excel('kma_outlier_sensitivity.xlsx',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26f1910b",
    "metadata": {},
    "source": [
