new major updates

--- a/Results_analysis_2_1_komodo_project_DKA_etc.ipynb
+++ b/Results_analysis_2_1_komodo_project_DKA_etc.ipynb
@@ -811,12 +811,12 @@
    "id": "6fc42052",
    "metadata": {},
    "source": [
-    "### Tuning for n hyperparameters"
+    "### Tuning for hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "29dd669d",
    "metadata": {},
    "outputs": [],
@@ -824,6 +824,14 @@
     "hotel,tur,timematrix = generate_data(n=30,random_state=40)\n",
     "travel_days = 3\n",
     "dwaktu,dtarif,drating = 1,1,1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "742c59f2",
+   "metadata": {},
+   "source": [
+    "#### Hyperparameter : n"
    ]
   },
   {
@@ -890,6 +898,122 @@
     "          \"run_time\":[i[1] for i in n_results]}\n",
     "result = pd.DataFrame(result)\n",
     "result.to_excel(\"dka_tuning_n_parameter.xlsx\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37a01b0b",
+   "metadata": {},
+   "source": [
+    "#### Hyperparameter : p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f1d9bb0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25\n",
+      "0.5\n",
+      "0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# p\n",
+    "p_ls = [0.25,0.5,0.75]\n",
+    "p_results = []\n",
+    "for p in p_ls:\n",
+    "    print(p)\n",
+    "    dka_vrp = DKA_VRP(p=p,random_state=100)\n",
+    "    results_dka_vrp = get_analysis(dka_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    p_results.append([results_dka_vrp['fitness'],results_dka_vrp['run_time']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "64bab665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.6434002510167384, 2.1020259857177734],\n",
+       " [0.6434002510167384, 2.304880142211914],\n",
+       " [0.6390237500452555, 1.3925681114196777]]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "614fa720",
+   "metadata": {},
+   "source": [
+    "#### Hyperparameter : smep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d3b5c13a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# smep\n",
+    "smep_ls = [3,5,8]\n",
+    "smep_results = []\n",
+    "for smep in smep_ls:\n",
+    "    print(smep)\n",
+    "    dka_vrp = DKA_VRP(p = 0.25,smep=smep,random_state=100)\n",
+    "    results_dka_vrp = get_analysis(dka_vrp,hotel,tur,timematrix,travel_days,dwaktu,dtarif,drating)\n",
+    "    smep_results.append([results_dka_vrp['fitness'],results_dka_vrp['run_time']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "40a00e0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.6557834166033091, 2.144763708114624],\n",
+       " [0.6434002510167384, 2.234604597091675],\n",
+       " [0.6642810271170486, 1.7997057437896729]]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smep_results"
    ]
   },
   {
